# macro-alert-ai-agent

./: .dockerignore  .gitignore  Dockerfile  MESSAGING.md  ONBOARDING.md  README.md  TECHNICAL.md
.claude/: settings.local.json
.github/workflows/: build.yml
cpp_engine/: .env.example  CMakeLists.txt
cpp_engine/src/: DotEnv.hpp  FilterSubscriber.hpp  IMarketDataSource.hpp  LiveRestDataSource.hpp  MacroFilter.hpp  PacedDataSource.hpp  SharedFilter.hpp  SimulatedDataSource.hpp  ZmqPublisher.hpp  main.cpp
scripts/: start-railway.sh
ts_agent/: .env.example  package-lock.json  package.json
ts_agent/src/: imessageInfo.ts  index.ts  spaceOutbound.ts  subscriber.ts  testPublisher.ts
